--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <title>KinoXP</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+      <ul
+        class="topnav"
+      >
+      <a href="#">  <img
+        th:src="@{img/KinoXPLogo.png}"
+        class="logo"
+        src="/src/main/resources/static/img/KinoXPLogo.png"
+        style="
+          display: block;
+          margin: 0 auto;
+          width: 150px;
+        "
+        alt="logo"
+      /></a>
+        <li style="margin-top: 3%;">
+          <a
+            class="active"
+            href="#"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal;"
+            >Program</a
+          >
+        </li>
+        <li style="margin-top: 3%;">
+          <a
+            href="#"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal; padding-left: 20px; padding-right: 20px;"
+            >Kommende film</a
+          >
+        </li>
+        <li style="margin-top: 3%;">
+          <a
+            href="#"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
+            >Web shop</a
+          >
+        </li>
+      </ul>
+      <br />
 
-<h1>Hello</h1>
 
+      
+        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
+
+        <br>
+
+
+        <div class="boxes">
+            <div class="box">Mandag d. 15/03</div>
+            <div class="box"> Tirsdag d. 16/03
+            </div>
+            <div class="box">Onsdag d. 17/03</div>
+            <div class="box">Onsdag d. 17/03</div>
+            <div class="box">Onsdag d. 17/03</div>
+            <div class="box">Onsdag d. 17/03</div>
+            <div class="box">Onsdag d. 17/03</div>
+            <div class="box">Onsdag d. 17/03</div>
+          </div>
+          
+
+       
+
+
+        
 </body>
 </html>
