--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -26,6 +26,10 @@ html {
   .logo {
   }
 
+  /* .form-select {
+      background: #fff !important;
+  } */
+
 
   .topnav {
     list-style-type: none;
