--- a/src/main/resources/templates/upcoming.html
+++ b/src/main/resources/templates/upcoming.html
@@ -57,7 +57,7 @@
 
 
       
-        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
+        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">KOMMENDE FILM</h1>
 
         <br>
 
