LOGIN OG CREATE FORM CREATED

--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -57,6 +57,28 @@
       
         <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
 
+      <form action="/postCreate" class="logincreateform" method="post">
+          <label for="firstname">Fornavn</label><br />
+          <input type="text" id="firstname" name="firstname"/><br /><br />
+
+          <label for="lastname">Efternavn</label><br />
+          <input type="text" id="lastname" name="lastname" /><br /><br />
+
+          <label for="username">Brugernavn</label><br />
+          <input type="text" id="username" name="username"/><br /><br />
+
+          <label for="email">Email</label><br />
+          <input type="text" id="email" name="email"/><br /><br />
+
+          <label for="password">Password</label><br />
+          <input type="text" id="password" name="password" /><br /><br />
+
+          <label for="phone">Telefonnr.</label><br />
+          <input type="text" id="phone" name="phone" /><br /><br />
+
+          <input type="submit" value="Opret profil" />
+      </form>
+
         
 </body>
 </html>
