--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -63,3 +63,29 @@ html {
     padding: 20px;              /* 2. */
     border: 4px solid white;
   }
+
+  .logincreateform {
+      width: 600px;
+      margin: 60px auto 30px;
+      padding: 10px;
+      position: relative;
+
+      box-shadow:
+              0 0 1px rgba(0, 0, 0, 0.3),
+              0 3px 7px rgba(0, 0, 0, 0.3),
+              inset 0 1px rgba(255,255,255,1),
+              inset 0 -3px 2px rgba(0,0,0,0.25);
+      border-radius: 5px;
+      background: linear-gradient(#eeefef, #ffffff 10%);
+
+      color: black;
+  }
+
+  .logincreateform input {
+
+      margin-left: 100px;
+      width: 400px;
+  }
+  .logincreateform label {
+      margin-left: 100px;
+  }
