--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -58,7 +58,7 @@
       
         <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
 
-      <form th:action="@{/newuser}" th:object="${user}" class="logincreateform" method="post">
+      <form action="#" th:action="@{/newuser}" th:object="${user}" class="logincreateform" method="post">
           <label for="firstname">Fornavn</label><br />
           <input type="text" th:field="*{firstname}" id="firstname" name="firstname"/><br /><br />
 
