--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>KinoXP</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -58,30 +59,30 @@
       
         <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
 
-      <form action="http://localhost:8080/newuser" class="logincreateform" method="post">
+      <form action="#" th:action="@{/newuser}" class="logincreateform" method="post" th:object="${user}">
           <label for="firstname">Fornavn</label><br />
-          <input type="text" id="firstname" name="firstname"/><br /><br />
+          <input type="text" id="firstname" th:field="*{firstname}" name="firstname"/><br /><br />
 
           <label for="lastname">Efternavn</label><br />
-          <input type="text"  id="lastname" name="lastname" /><br /><br />
+          <input type="text"  id="lastname" th:field="*{lastname}" name="lastname" /><br /><br />
 
           <label for="username">Brugernavn</label><br />
-          <input type="text"  id="username" name="username"/><br /><br />
+          <input type="text"  id="username" th:field="*{username}" name="username"/><br /><br />
 
           <label for="email">Email</label><br />
-          <input type="text"  id="email" name="email"/><br /><br />
+          <input type="text"  id="email" th:field="*{email}" name="email"/><br /><br />
 
           <label for="password">Password</label><br />
-          <input type="text"  id="password" name="password" /><br /><br />
+          <input type="text"  id="password" th:field="*{password}" name="password" /><br /><br />
 
           <label for="password">Alder</label><br />
-          <input type="number" id="age" name="age" /><br /><br />
+          <input type="number" id="age" th:field="*{age}" name="age" /><br /><br />
 
           <label for="phone">Telefonnr.</label><br />
-          <input type="text" id="phone" name="phone" /><br /><br />
+          <input type="text" id="phone" th:field="*{phone}" name="phone" /><br /><br />
 
-          <input type="hidden"  id="active" name="active" value="1"/>
-          <input type="hidden" id="roles" name="roles" value="USER"/><br /><br />
+          <input type="hidden"  id="active" name="active" value="1" />
+          <input type="hidden" id="roles" name="roles" value="ROLE_USER"/><br /><br />
 
           <input type="submit" value="Opret profil" />
       </form>
