--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,10 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <title>KinoXP</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<ul
+class="topnav"
+>
+<a href="#">  <img
+th:src="@{img/KinoXPLogo.png}"
+class="logo"
+src="/src/main/resources/static/img/KinoXPLogo.png"
+style="
+  display: block;
+  margin: 0 auto;
+  width: 150px;
+"
+alt="logo"
+/></a>
+<li style="margin-top: 3%;">
+  <a
+    class="active"
+    href="#"
+    style="color: white; text-decoration: none; font-size: 20px; font-weight: normal;"
+    >Program</a
+  >
+</li>
+<li style="margin-top: 3%;">
+  <a
+    href="/upcoming"
+    style="color: white; text-decoration: none; font-size: 20px; font-weight: normal; padding-left: 20px; padding-right: 20px;"
+    >Kommende film</a
+  >
+</li>
+<li style="margin-top: 3%;">
+  <a
+    href="#"
+    style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
+    >Web shop</a
+  >
+</li>
 
-<h1>Hello Admin Page</h1>
+
+
+<li >
+    <div
+      href="#"
+      style="text-decoration: none; font-size: 20px; font-weight: normal; color: red; background-color: azure !important; padding:60px; margin-left: 993px;"
+      ><a href="#" style="color: red;">Login</a> | <a href="#" style="color: red;">tilmeld</a></div>
+    
+  </li>
+</ul>
+
+<ul
+style="display: flex; flex-direction: column; background-color: black; width: 15%; height: 100vh"
+>
+<li>
+  <a
+    class="active"
+    href="#"
+    style="color: white; text-decoration: none; font-size: 25px; font-weight: normal;"
+    >Program</a
+  >
+</li>
+<li>
+  <a
+    href="/upcoming"
+    style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
+    >Kommende film</a
+  >
+</li>
+<li>
+  <a
+    href="#"
+    style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
+    >Web shop</a
+  >
+</li>
+
+</ul>
+<br />
+
+
 
 </body>
 </html>
