--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -65,23 +65,37 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
     class="active"
     href="#"
     style="color: white; text-decoration: none; font-size: 25px; font-weight: normal;"
-    >Program</a
+    >Kalender</a
   >
 </li>
 <li>
   <a
     href="/upcoming"
     style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
-    >Kommende film</a
+    >Reservation</a
   >
 </li>
 <li>
   <a
     href="#"
     style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
-    >Web shop</a
+    >Se film</a
   >
 </li>
+<li>
+    <a
+      href="#"
+      style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
+      >Opret film</a
+    >
+  </li>
+  <li>
+    <a
+      href="#"
+      style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
+      >Opret employee</a
+    >
+  </li>
 
 </ul>
 <br />
