--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -89,3 +89,29 @@ html {
   .logincreateform label {
       margin-left: 100px;
   }
+
+.adminform {
+    width: 600px;
+    margin: -800px 800px 30px;
+    padding: 10px;
+    position: relative;
+
+    box-shadow:
+            0 0 1px rgba(0, 0, 0, 0.3),
+            0 3px 7px rgba(0, 0, 0, 0.3),
+            inset 0 1px rgba(255,255,255,1),
+            inset 0 -3px 2px rgba(0,0,0,0.25);
+    border-radius: 5px;
+    background: linear-gradient(#eeefef, #ffffff 10%);
+
+    color: black;
+}
+
+.adminform input {
+
+    margin-left: 100px;
+    width: 400px;
+}
+.adminform label {
+    margin-left: 100px;
+}
