--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -84,7 +84,7 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
 </li>
 <li>
     <a
-      href="#"
+      href="/createmovie"
       style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
       >Opret film</a
     >
