--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>KinoXP</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -55,18 +57,16 @@
 </ul>
 <br />
 
-<h1 style="color: white; letter-spacing: 5px; padding: 10px;">REGISTER SUCCESS</h1>
+<h1 style="color: white; letter-spacing: 5px; padding: 10px;">PROFIL OPRETTET</h1>
 
-<form action="/postLogin" class="logincreateform" method="post">
-    <label for="username">Username</label><br />
-    <input type="username" id="username" name="username" /><br /><br />
-    <label for="password">Password</label><br />
-    <input type="password" id="password" name="password" /><br /><br />
-    <!-- <label for="password">Id</label><br />
-    <input type="text" id="text" name="idmanager" /><br /><br /> -->
-    <input type="submit" value="Login" />
-</form>
 
+<div class="logincreateform">
+    <h3 style="color: black; letter-spacing: 5px; padding: 10px;">Tillykke! Din profil er nu oprettet</h3>
+
+
+
+
+</div>
 
 </body>
 </html>
