--- a/src/main/resources/templates/seemovie.html
+++ b/src/main/resources/templates/seemovie.html
@@ -121,17 +121,16 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
           </tr>
       </thead>
       <tbody>
-          <tr th:each="user : ${listMovie}">
-            <td th:text="${user.title}"></td>
-            <td th:text="${user.age}"></td>
-            <td th:text="${user.hall}"></td>
-            <td th:text="${user.date}"></td>
-              <!-- 
+          <tr th:each="movie : ${listMovie}">
+            <td th:text="${movie.title}"></td>
+            <td th:text="${movie.age}"></td>
+            <td th:text="${movie.hall}"></td>
+            <td th:text="${movie.date}"></td>
+              
               <td>
-                  <a th:href="@{/userFormUpdate/{id}(id=${user.id})}" class="btn btn-primary">Update</a>
-                  <a th:href="@{/deleteUser/{id}(id=${user.id})}" class="btn btn-danger">Delete</a>
-                  <a th:href="@{/sendMessage/{id}(id=${user.id})}" class="btn btn-success">Send Message</a>
-              </td> -->
+                  <a th:href="@{/movieFormUpdate/{movieid}(movieid=${movie.movieid})}" class="btn btn-primary">Update</a>
+                  <!-- <a th:href="@{/deleteUser/{id}(id=${user.id})}" class="btn btn-danger">Delete</a> -->
+              </td>
           </tr>
       </tbody>
   </table>
