--- a/src/main/resources/templates/createmovie-with-js.html
+++ b/src/main/resources/templates/createmovie-with-js.html
@@ -3,10 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">¨
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Create movie with js</title>
 </head>
 <body>
+    <ul
+    class="topnav"
+  >
+  <a href="#">  <img
+    class="logo"
+    src="/src/main/resources/static/img/KinoXPLogo.png"
+    style="
+      display: block;
+      margin: 0 auto;
+      width: 150px;
+    "
+    alt="logo"
+  /></a>
+    <li style="margin-top: 3%;">
+      <a
+        class="active"
+        href="#"
+        style="color: white; text-decoration: none; font-size: 20px; font-weight: normal;"
+        >Program</a
+      >
+    </li>
+    <li style="margin-top: 3%;">
+      <a
+        href="/upcoming"
+        style="color: white; text-decoration: none; font-size: 20px; font-weight: normal; padding-left: 20px; padding-right: 20px;"
+        >Kommende film</a
+      >
+    </li>
+    <li style="margin-top: 3%;">
+      <a
+        href="#"
+        style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
+        >Web shop</a
+      >
+    </li>
+
+    <li >
+        <div
+          href="#"
+          style="text-decoration: none; font-size: 20px; font-weight: normal; color: red; background-color: azure !important; padding:60px; margin-left: 993px;"
+          ><a href="#" style="color: red;">Login</a> | <a href="#" style="color: red;">tilmeld</a></div>
+        
+      </li>
+  </ul>
+  <br />
 
     <form action="#" enctype='application/x-www-form-urlencoded' id="personform" method="post">
         <label for="title">Titel</label><br />
