Show dropdown genre

--- a/src/main/resources/templates/createmovie-with-js.html
+++ b/src/main/resources/templates/createmovie-with-js.html
@@ -60,6 +60,10 @@
         <label for="title">Titel</label><br />
         <input type="text" id="title" name="title" name="title"/><br /><br />
 
+        <select id="locality-dropdown" name="locality">
+
+        </select> <br /><br />
+
         <label for="time">Tidspunkt</label><br />
         <input type="number"  id="time" name="time" name="time" /><br /><br />
 
@@ -82,6 +86,8 @@
       </form>
 
       <script src="../js/formpostperson.js"></script>
+
+      <script src="../js/fetch-genres.js"></script>
     
 </body>
 </html>
