--- a/src/main/resources/templates/fetch-movies.html
+++ b/src/main/resources/templates/fetch-movies.html
@@ -2,10 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>vi bruger fetch</title>
+  <title>Get all movies</title>
+  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Hent film</h1>
+
+ <ul
+        class="topnav"
+      >
+      <a href="#">  <img
+        th:src="@{img/KinoXPLogo.png}"
+        class="logo"
+        src="/src/main/resources/static/img/KinoXPLogo.png"
+        style="
+          display: block;
+          margin: 0 auto;
+          width: 150px;
+        "
+        alt="logo"
+      /></a>
+        <li style="margin-top: 3%;">
+          <a
+            class="active"
+            href="#"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal;"
+            >Program</a
+          >
+        </li>
+        <li style="margin-top: 3%;">
+          <a
+            href="/upcoming"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal; padding-left: 20px; padding-right: 20px;"
+            >Kommende film</a
+          >
+        </li>
+        <li style="margin-top: 3%;">
+          <a
+            href="#"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
+            >Web shop</a
+          >
+        </li>
+
+        <li >
+            <div
+              href="#"
+              style="text-decoration: none; font-size: 20px; font-weight: normal; color: red; background-color: azure !important; padding:60px; margin-left: 993px;"
+              ><a href="#" style="color: red;">Login</a> | <a href="#" style="color: red;">tilmeld</a></div>
+            
+          </li>
+      </ul>
+      <br />
 
 
 
