--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
           <br>
           
         
-          <div style="padding: 10px;">
+          <!-- <div style="padding: 10px;">
           <h3 style="color: white; letter-spacing: 5px; padding: 10px;">Vælg film</h3>
 <select class="form-select form-select-sm btn-secondary " aria-label=".form-select-sm example" style="color: white; 5px; margin-left: 20px; border: 4px solid white; ">
     <option value="" disabled selected></option>
@@ -86,7 +86,14 @@
   <option value="2">Simpsons</option>
   <option value="3">Avengers</option>
 </select>
-</div>
+</div> -->
+
+
+<select id="locality-dropdown" name="locality" class="form-select form-select-sm btn-secondary " aria-label=".form-select-sm example" style="color: white; 5px; margin-left: 20px; border: 4px solid white; ">
+
+</select>
+
+<script src="../js/fetch-movies.js"></script>
 
         
 </body>
