Fetch tables and use bootstrap

--- a/src/main/resources/templates/createmovie-with-js.html
+++ b/src/main/resources/templates/createmovie-with-js.html
@@ -58,23 +58,16 @@
 
     <form action="#" enctype='application/x-www-form-urlencoded' id="personform" method="post">
         <label for="title">Titel</label><br />
-        <input type="text" id="title" name="title" name="title"/><br /><br />
+        <input type="text" id="title" name="title" /><br /><br />
 
-        <select id="locality-dropdown" name="locality">
+        <!-- <input type="number" id="genre" name="genre2" ><br /><br /> -->
+
+        <select id="genreid" name="genreid">
 
         </select> <br /><br />
 
-        <label for="time">Tidspunkt</label><br />
-        <input type="number"  id="time" name="time" name="time" /><br /><br />
-
         <label for="length">Længde</label><br />
-        <input type="number"  id="length" name="length" name="length"/><br /><br />
-
-        <label for="hall">Sal</label><br />
-        <input type="text"  id="hall" name="hall" name="hall"/><br /><br />
-
-        <label for="date">Dato</label><br />
-        <input type="text"  id="date" name="date" name="date" /><br /><br />
+        <input type="number" id="length" name="length" name="length" /><br /><br />
 
         <label for="age">Aldersgrænse</label><br />
         <input type="number" id="age" name="age" name="age" /><br /><br />
