--- a/src/main/resources/templates/createmovie-with-js.html
+++ b/src/main/resources/templates/createmovie-with-js.html
@@ -58,22 +58,22 @@
 
     <form action="#" enctype='application/x-www-form-urlencoded' id="personform" method="post">
         <label for="title">Titel</label><br />
-        <input type="text" id="title" name="title" /><br /><br />
+        <input type="text" id="title" name="title" value="spider" /><br /><br />
 
-        <!-- <input type="number" id="genre" name="genre2" ><br /><br /> -->
+        <!-- <input type="text" id="genre" name="genre" ><br /><br /> -->
 
-        <select id="genreid" name="genreid">
+        <select id="genreid" name="genre">
 
         </select> <br /><br />
 
         <label for="length">Længde</label><br />
-        <input type="number" id="length" name="length" name="length" /><br /><br />
+        <input type="number" id="length" name="length" name="length" value="1" /><br /><br />
 
         <label for="age">Aldersgrænse</label><br />
-        <input type="number" id="age" name="age" name="age" /><br /><br />
+        <input type="number" id="age" name="age" name="age" value="1" /><br /><br />
 
         <label for="actor">Skuespiller</label><br />
-        <input type="text" id="actor" name="actor" name="actor" /><br /><br />
+        <input type="text" id="actor" name="actor" name="actor" value="dicaprio" /><br /><br />
 
         <input type="submit" value="Opret film" />
       </form>
