--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -35,7 +35,7 @@
         <li style="margin-top: 3%;">
           <a
             href="/upcoming"
-            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal; padding-left: 20px; padding-right: 20px;"
+            style="color: white; text-decoration: none; font-size: 20px; font-weight: normal;"
             >Kommende film</a
           >
         </li>
