--- a/src/main/resources/templates/findmovie.html
+++ b/src/main/resources/templates/findmovie.html
@@ -34,7 +34,7 @@ alt="logo"
 <li style="margin-top: 3%;">
   <a
     href="/upcoming"
-    style="color: white; text-decoration: none; font-size: 20px; font-weight: normal; padding-left: 20px; padding-right: 20px;"
+    style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
     >Kommende film</a
   >
 </li>
