--- a/src/main/resources/templates/createmovie-with-js.html
+++ b/src/main/resources/templates/createmovie-with-js.html
@@ -58,11 +58,7 @@
 
     <form action="#" enctype='application/x-www-form-urlencoded' id="personform" method="post" class="logincreateform">
         <label for="title">Titel</label><br />
-        <input type="text" id="title" name="title" value="spider" /><br /><br />
-
-        <!-- <div class="select">
-
-        <select id="genreid" name="genre" id="standard-select"> -->
+        <input type="text" id="title" name="title" /><br /><br />
 
           <label for="standard-select">Standard Select</label>
     <div class="select">
@@ -73,13 +69,13 @@
     </div> <br /><br />
 
         <label for="length">Længde</label><br />
-        <input type="number" id="length" name="length" name="length" value="1" /><br /><br />
+        <input type="number" id="length" name="length" name="length" /><br /><br />
 
         <label for="age">Aldersgrænse</label><br />
-        <input type="number" id="age" name="age" name="age" value="1" /><br /><br />
+        <input type="number" id="age" name="age" name="age" /><br /><br />
 
         <label for="actor">Skuespiller</label><br />
-        <input type="text" id="actor" name="actor" name="actor" value="dicaprio" /><br /><br />
+        <input type="text" id="actor" name="actor" name="actor" /><br /><br />
 
         <input type="submit" value="Opret film" />
       </form>
