--- a/src/main/resources/templates/seemovie.html
+++ b/src/main/resources/templates/seemovie.html
@@ -101,7 +101,7 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
 <br />
 
 
-<!-- <section id="intro" class="" style="color: aliceblue;">
+<section id="intro" class="" style="color: aliceblue;">
   <table border="1" class="table table-striped table-responsive-md">
       <thead>
           <tr>
@@ -123,31 +123,19 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
       <tbody>
           <tr th:each="movie : ${listMovie}">
             <td th:text="${movie.title}"></td>
+            <td th:text="${movie.length}"></td>
             <td th:text="${movie.age}"></td>
-            <td th:text="${movie.hall}"></td>
-            <td th:text="${movie.date}"></td>
-              
+            <td th:text="${movie.actor}"></td>
               <td>
                   <a th:href="@{/movieFormUpdate/{movieid}(movieid=${movie.movieid})}" class="btn btn-primary">Update</a>
-                  <a th:href="@{/deleteUser/{id}(id=${user.id})}" class="btn btn-danger">Delete</a>
+                  <!-- <a th:href="@{/deleteUser/{id}(id=${user.id})}" class="btn btn-danger">Delete</a> -->
               </td>
           </tr>
       </tbody>
   </table>
   </div>
   </div>
-</section> -->
-
-<select class="form-control" id="userInfo" name="firstname">
-  <option label=" ">none</option>
-  <option
-    th:each="movie : ${listMovie}"
-    th:value="${movie.title}"
-    th:text="${movie.title}"
-  ></option>
-</select>
-<br />
-
+</section>
 
 
 </body>
