Fetch movie and show in date

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -63,7 +63,7 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
 <li>
   <a
     class="active"
-    href="#"
+    href="../js/moviecalendar.js"
     style="color: white; text-decoration: none; font-size: 25px; font-weight: normal;"
     >Kalender</a
   >
