--- a/src/main/resources/templates/moviecalendar.html
+++ b/src/main/resources/templates/moviecalendar.html
@@ -2,11 +2,63 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
+    <title>KinoXP</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js"></script>
     <script src="../js/moviecalendar.js"></script>
   </head>
   <body>
+
+    <ul
+    class="topnav"
+  >
+  <a href="#">  <img
+    th:src="@{img/KinoXPLogo.png}"
+    class="logo"
+    src="/src/main/resources/static/img/KinoXPLogo.png"
+    style="
+      display: block;
+      margin: 0 auto;
+      width: 150px;
+    "
+    alt="logo"
+  /></a>
+    <li style="margin-top: 3%;">
+      <a
+        class="active"
+        href="#"
+        style="color: white; text-decoration: none; font-size: 20px; font-weight: normal;"
+        >Program</a
+      >
+    </li>
+    <li style="margin-top: 3%;">
+      <a
+        href="/upcoming"
+        style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
+        >Kommende film</a
+      >
+    </li>
+    <li style="margin-top: 3%;">
+      <a
+        href="#"
+        style="color: white; text-decoration: none; font-size: 20px; font-weight: normal"
+        >Web shop</a
+      >
+    </li>
+
+    <li >
+        <div
+          href="#"
+          style="text-decoration: none; font-size: 20px; font-weight: normal; color: red; background-color: azure !important; padding:60px; margin-left: 993px;"
+          ><a href="#" style="color: red;">Login</a> | <a href="#" style="color: red;">tilmeld</a></div>
+        
+      </li>
+  </ul>
+  <br />
 
 
     <div id='calendar'></div>
