--- a/src/main/resources/templates/seemovie.html
+++ b/src/main/resources/templates/seemovie.html
@@ -57,49 +57,7 @@ alt="logo"
   </li>
 </ul>
 
-<ul
-style="display: flex; flex-direction: column; background-color: black; width: 15%; height: 100vh"
->
-<li>
-  <a
-    class="active"
-    href="#"
-    style="color: white; text-decoration: none; font-size: 25px; font-weight: normal;"
-    >Kalender</a
-  >
-</li>
-<li>
-  <a
-    href="/upcoming"
-    style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
-    >Reservation</a
-  >
-</li>
-<li>
-  <a
-    href="#"
-    style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
-    >Se film</a
-  >
-</li>
-<li>
-    <a
-      href="/createmovie"
-      style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
-      >Opret film</a
-    >
-  </li>
-  <li>
-    <a
-      href="#"
-      style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
-      >Opret employee</a
-    >
-  </li>
-
-</ul>
-<br />
-
+<br>
 
 <section id="intro" class="" style="color: aliceblue;">
   <table border="1" class="table table-striped table-responsive-md">
@@ -109,13 +67,13 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
                  Titel</a>
               </th>
               <th>
+                 Længde</a>
+              </th>
+              <th>
                   Alderskrav</a>
               </th>
               <th>
-                  Sal</a>
-              </th>
-              <th>
-                  Dato</a>
+                  Skuespiller</a>
               </th>
               <th> Handlinger </th>
           </tr>
