--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -57,7 +57,7 @@
       </ul>
       <br />
       
-        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
+        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">Opret bruger</h1>
 
       <form action="#" th:action="@{/newuser}" class="logincreateform" method="post" th:object="${user}">
           <label for="firstname">Fornavn</label><br />
