--- a/src/main/resources/templates/createmovie.html
+++ b/src/main/resources/templates/createmovie.html
@@ -57,28 +57,25 @@
       </ul>
       <br />
       
-        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">SPILLER NU</h1>
+        <h1 style="color: white; letter-spacing: 5px; padding: 10px;">Opret film</h1>
 
-      <form action="#" th:action="@{/newmovie}" class="logincreateform" method="post" th:object="${movie}">
-    
+        <form action="/newmovie" enctype='application/x-www-form-urlencoded' id="personform" method="post" class="logincreateform">
 
           <label for="title">Titel</label><br />
-          <input type="text" id="title" th:field="*{title}" name="title"/><br /><br />
-
-          <label for="time">Tidspunkt</label><br />
-          <input type="number"  id="time" th:field="*{time}" name="time" /><br /><br />
+          <input type="text" id="title" name="title" /><br /><br />
 
           <label for="length">Længde</label><br />
-          <input type="number"  id="length" th:field="*{length}" name="length"/><br /><br />
+          <input type="number" id="length" name="length" /><br /><br />
 
           <label for="age">Aldersgrænse</label><br />
-          <input type="number" id="age" th:field="*{age}" name="age" /><br /><br />
+          <input type="number" id="age" name="age" /><br /><br />
 
           <label for="actor">Skuespiller</label><br />
-          <input type="text" id="actor" th:field="*{actor}" name="actor" /><br /><br />
-
+          <input type="text" id="actor" name="actor" /><br /><br />
+  
           <input type="submit" value="Opret film" />
-      </form>
+        </form>
+  
 
 </body>
 </html>
