--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -63,7 +63,7 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
 <li>
   <a
     class="active"
-    href="../js/moviecalendar.js"
+    href="http://localhost:63342/kinoxp/templates/moviecalendar.html?_ijt=pu2v9pun1bcqv1iu1bd3s3ti5c"
     style="color: white; text-decoration: none; font-size: 25px; font-weight: normal;"
     >Kalender</a
   >
@@ -84,7 +84,7 @@ style="display: flex; flex-direction: column; background-color: black; width: 15
 </li>
 <li>
     <a
-      href="/createmovie"
+      href="http://localhost:63342/kinoxp/templates/createmovie-with-js.html?_ijt=7r98u88q4crf5vi6knimc03m7h"
       style="color: white; text-decoration: none; font-size: 25px; font-weight: normal"
       >Opret film</a
     >
