--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
             <div
               href="#"
               style="text-decoration: none; font-size: 20px; font-weight: normal; color: red; background-color: azure !important; padding:60px; margin-left: 993px;"
-              ><a href="#" style="color: red;">Login</a> | <a href="#" style="color: red;">tilmeld</a></div>
+              ><a href="#" style="color: red;">Login</a> | <a href="#" style="color: #ff0000;">tilmeld</a></div>
             
           </li>
       </ul>
@@ -88,10 +88,12 @@
 </select>
 </div> -->
 
+      <!--
 
 <select id="locality-dropdown" name="locality" class="form-select form-select-sm btn-secondary " aria-label=".form-select-sm example" style="color: white; 5px; margin-left: 20px; border: 4px solid white; ">
 
 </select>
+-->
 
 <script src="../js/fetch-movies.js"></script>
 
